# adhan-on-google-home

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.circleci/: config.yml
.circleci/scripts/: install-changelog-manager.sh
app/: api.py  app_types.py  bll.py  caster.py  config.py  flask_app.py  helper.py  main.py  schedulers.py
src/: index.js
src/config/: index.js
tests/: test_schedulers.py
