[tool.poetry]
name = "Athan-Caster"
version = "0.1.0"
description = "A Google Home Athan caster"
authors = ["Ahmad El Masri <ahmadjelmasri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
requests = "^2.25.1"
pychromecast = "^13.0.7"
APScheduler = "^3.10.1"
pydub = "^0.25.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
poethepoet = "^0.20.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
watchdog = "^3.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start= "watchmedo auto-restart -d . -p 'app/**/*.py' -- ./start.sh"
test = "pytest tests/"
coverage = "poetry run pytest --cov=app --cov-report xml:coverage.xml --cov-report html:htmlcov tests/"